--- a/Noter/pom.xml
+++ b/Noter/pom.xml
@@ -29,6 +29,11 @@
       <artifactId>pdfbox</artifactId>
       <version>2.0.24</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-csv</artifactId>
+      <version>1.9.0</version>
+    </dependency>
   </dependencies>
 
   <build>
